reports/program-structure.log
Traceback (most recent call last):
  File "/Users/Alvin/opt/anaconda3/envs/python-notes/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/Users/Alvin/opt/anaconda3/envs/python-notes/lib/python3.7/site-packages/nbclient/client.py", line 1082, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/Alvin/opt/anaconda3/envs/python-notes/lib/python3.7/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/Alvin/opt/anaconda3/envs/python-notes/lib/python3.7/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/Users/Alvin/opt/anaconda3/envs/python-notes/lib/python3.7/asyncio/base_events.py", line 568, in run_until_complete
    return future.result()
  File "/Users/Alvin/opt/anaconda3/envs/python-notes/lib/python3.7/site-packages/nbclient/client.py", line 536, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/Users/Alvin/opt/anaconda3/envs/python-notes/lib/python3.7/site-packages/nbclient/client.py", line 827, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/Alvin/opt/anaconda3/envs/python-notes/lib/python3.7/site-packages/nbclient/client.py", line 735, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from tqdm import tqdm 
for i in tqdm(range(10000)): 
sleep(0.01) 
------------------

[0;36m  File [0;32m"<ipython-input-3-617d68ecd70d>"[0;36m, line [0;32m3[0m
[0;31m    sleep(0.01)[0m
[0m        ^[0m
[0;31mIndentationError[0m[0;31m:[0m expected an indented block

IndentationError: expected an indented block (<ipython-input-3-617d68ecd70d>, line 3)

